crates/specforge-cli/tests/snapshots/tests__outcome__refusals_today.snap
---
source: crates/specforge-cli/tests/outcome.rs
expression: table
---
C1 | specforge stats
exit 2
-- stdout:
-- stderr:
error[E045]: invalid test results ./specforge-report.json: EOF while parsing an object at line 1 column 1 (expected the RES-15 specforge-report.json shape)
  = help: run `specforge collect` again to rewrite the report, or fix or remove the file

C2 | specforge stats --format json
exit 2
-- stdout:
-- stderr:
error[E045]: invalid test results ./specforge-report.json: EOF while parsing an object at line 1 column 1 (expected the RES-15 specforge-report.json shape)
  = help: run `specforge collect` again to rewrite the report, or fix or remove the file

C3 | specforge analyze --json
exit 2
-- stdout:
-- stderr:
error[E045]: invalid test results ./specforge-report.json: EOF while parsing an object at line 1 column 1 (expected the RES-15 specforge-report.json shape)
  = help: run `specforge collect` again to rewrite the report, or fix or remove the file

C4 | specforge analyze nope
exit 2
-- stdout:
-- stderr:
error: Unknown analysis pass 'nope' (available: all, coverage, contracts, @specforge/testing:coverage)

C5 | specforge trace nope --format json
exit 1
-- stdout:
-- stderr:
error[E003]: unresolved entity 'nope' — not found in graph

C6 | specforge migrate --target-version 9.9
exit 1
-- stdout:
-- stderr:
E019: unsupported target version 9.9 (max supported: 1.0)
  help: Use a format version between 1.0 and 1.0.

C7 | specforge migrate --target-version 9.9 --format json
exit 1
-- stdout:
-- stderr:
E019: unsupported target version 9.9 (max supported: 1.0)
  help: Use a format version between 1.0 and 1.0.

C8 | specforge schema --kind behavor
exit 1
-- stdout:
-- stderr:
unknown entity kind: 'behavor'
  = help: did you mean 'behavior'?

C9 | specforge export --scope nope
exit 1
-- stdout:
-- stderr:
E003: unresolved scope entity 'nope' — entity not found in graph

C10 | specforge init --name a --format json
exit 1
-- stdout:
-- stderr:
error: invalid project name 'a': it must be 2-60 characters, as the starter's spec ID must

C11 | specforge collect --path . --format json
exit 1
-- stdout:
{
  "code": "E045",
  "error": "no specforge project found (missing specforge.json or specforge.spec)",
  "suggestion": null
}
-- stderr:

C12 | specforge add @specforge/nope --format json
exit 1
-- stdout:
{
  "code": "E063",
  "error": "no registry configured: `add` needs one, and SpecForge has no built-in registry",
  "suggestion": "add a \"registries\" array to specforge.json, e.g. \"registries\": [{\"alias\": \"main\", \"url\": \"<registry URL>\", \"default_registry\": true}]"
}
-- stderr:
